# FreelyCraftCodes

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
PlatIF_EVT/: PlatIF_Event.c  PlatIF_Event.h  PlatIF_EventFlags.h  PlatIF_EventID.h  PlatIF_EventInterfaces.h  PlatIF_EventMetaID.h  PlatIF_EventOperator.h  PlatIF_EventTypes.h
PlatIF_EVT_UT_Common/: _UT_EVT_Common.h
PlatIF_EVT_UT_useCmocka/: CMakeLists.txt  UT_T1_PubSubEvt_Boundary.c  UT_T1_PubSubEvt_Concurrency.c  UT_T1_PubSubEvt_Demo.c  UT_T1_PubSubEvt_NotSupport.c  UT_T1_PubSubEvt_Others.c  UT_T1_PubSubEvt_Performance.c  UT_T1_PubSubEvt_Proiority.c  UT_T1_PubSubEvt_State.c  UT_T1_PubSubEvt_Typical.c  _UT_EVT_Common.h
PlatIF_EVT_UT_useCriterion/: CMakeLists.txt  UT_T1_PubSubEvt_Typical.c  _UT_EVT_Common.h
PlatIF_EVT_UT_useGtest/: CMakeLists.txt  UT_T1_PubSubEvt_Typical.cxx
PlatIF_IOC/: PlatIF_IOC.c  PlatIF_IOC.h  PlatIF_IOC_EvtID.h  _PlatIF_IOC.h  _PlatIF_IOC_Event.c  _PlatIF_IOC_EventTest.cxx  _PlatIF_IOC_Module.c  _PlatIF_IOC_ModuleTest.cxx
PlatIF_IOC_UT_useGtest/: CMakeLists.txt  UT_ConlesEVT_State.cxx  UT_FreelyDrafts.cxx  UT_T1_EventConlesMode_Concurrency.cxx  UT_T1_EventConlesMode_Performance.cxx  UT_T1_EventConlesMode_State.cxx  UT_T1_EventConlesMode_Typical.cxx  UT_T1_Module_Typical.cxx  _UT_IOC_Common.h
PlatIF_PEC/: PLT_PEC.h  PLT_PEC_Server.c  PLT_PEC_User.c
PlatIF_PEC_UT_useCmocka/: CMakeLists.txt  UT_T1_Server.c  _UT_Common.h
ThinkOS/: TOS_Base4ALL.h  TOS_BaseCommand.h  TOS_BaseHelpers.h  TOS_BaseObject.h  TOS_BaseObjectTypes.h  TOS_BaseOption.h  TOS_BaseTypes.h
Tools/: CMakeLists.txt  tos-collapseCallStacks_forFlameGraph.py  tos-ebedmemstat.c
